--- a/mongodb/tutorial/exercise-1/package.json
+++ b/mongodb/tutorial/exercise-1/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "todolist-v1",
+  "name": "exercise-1",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.16.3",
+    "express": "^4.18.2",
     "mongoose": "^7.1.0"
   }
 }
