--- a/nodejs/tutorial/solutions/exercise-1/package.json
+++ b/nodejs/tutorial/solutions/exercise-1/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "exercise-3",
+  "name": "exercise-2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Tom Huynh",
+  "author": "tom huynh",
   "license": "ISC",
   "dependencies": {
-    "cat-ascii-faces": "^2.0.0",
-    "chalk": "^2.4.2",
-    "figlet": "^1.6.0"
+    "chalk": "^2.4.2"
   }
 }
