--- a/nodejs/tutorial/solutions/exercise-2/package.json
+++ b/nodejs/tutorial/solutions/exercise-2/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "exercise-2",
+  "name": "exercise-3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "tom huynh",
+  "author": "Tom Huynh",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.2"
+    "cat-ascii-faces": "^2.0.0",
+    "chalk": "^2.4.2",
+    "figlet": "^1.6.0"
   }
 }
